# bcf-visualization

./: .gitattributes  .gitignore  AGENTS.md  DEVELOPERS.md  README.md  TODO.md  USERS.md  index.html  pyproject.toml  requirements.txt
.data-release/: SHA256SUMS
data/: packages.json
docs/: chart_pack_guide.md  data_file_audit.md  derived_dataset_inventory.md  local_nlp_annotation_playbook.md  local_nlp_label_schema.md  local_nlp_plan.md  local_nlp_research.md  local_nlp_runbook.md  local_nlp_serving.md  local_nlp_setup.md  local_nlp_training.md  narrative_timeline_april_2011.md  phase4_sky_view_design.md  phase4_viz_library_research.md  point_collection_and_spending_regimes.md  pre_narrative_history.md  private_source_repo_runbook.md  reference_archive.md  roll_simulation_and_validation_notes.md  test_feature_inventory.md  test_surface_cleanup_plan.md
nlp/: __init__.py  bootstrap.py  candidates.py  client.py  config.py  encode.py  evaluate.py  proposals.py  runners.py  runners_impl.py  schema.py  serve.py  train_section.py  train_span.py
plans/: canonical_cp_accounting.md  daw_scrubber_v2.md  forge_curator_tui.md  perk_name_reconciliation_triage.md  roll_sequence_validation.md  web_appjs_modularization.md
scripts/: _common.py  bootstrap_chapter_alignment_anchors.py  bootstrap_proposals.py  build_canonical_perks.py  build_chapter_facts.py  build_constellation_wireframes.py  build_perk_directory.py  build_section_classifications.py  build_visualization_facts.py  chapter_alignment.py  copy_bcf_data_from_worktree.py  copy_bcf_epub_from_worktree.py  cp_epub_map.py  data_paths.py  data_release.py  derive_constellation_knowledge.py  derive_constellation_lifecycle.py  derive_outstanding_perks.py  derive_roll_facts.py  derive_roll_outcomes.py  derive_roll_resolutions.py  derive_timeline.py  download_bcf_epub.py  download_deployed_data_package.py  eligibility_spans.py  enrich_an_ranges.py  extract_chapter_sections.py  extract_constellation_svgs.py  extract_last_edited.py  find_roll_locations.py  find_text_backed_rolls.py  hydrate_source_epub.py  make_charts.py  migrate_vertex_source.py  multi_grab.py  parse_chapters.py  parse_comments.py  parse_reference.py  parse_rolls.py  parse_threadmarks.py  (+22 more)
tests/: conftest.py  test_an_detector.py  test_bootstrap.py  test_build_constellation_wireframes.py  test_build_visualization_facts.py  test_candidates.py  test_chapter_alignment.py  test_chapter_alignment_fingerprints.py  test_chapter_facts_scenarios.py  test_chapter_publication_dates_seed.py  test_chapter_roll_overrides.py  test_chapter_roll_overrides_unittest.py  test_codex_environment_data.py  test_constellation_pages_scaffold.py  test_cp_epub_map.py  test_data_package_contract.py  test_deferred_rolls.py  test_encode.py  test_evidence_scorer.py  test_extract_classify_predict_scenarios.py  test_forge_curator.py  test_forge_curator_roll_labels.py  test_forge_curator_roll_labels_unittest.py  test_forge_curator_state.py  test_model_validation.py  test_model_validation_scenarios.py  test_pages_smoke.py  test_passage_view.py  test_pipeline.py  test_schema.py  (+21 more)
(+179 files in other folders)
