[project]
name = "bcf-visualization"
version = "0.1.0"
description = "Forge Curator and derived-data tooling for the BCF visualization pipeline."
requires-python = ">=3.11,<3.15"

# Core deps for lightweight local work: Forge Curator, schema validation,
# parser/regeneration scripts, and static visualization data generation.
dependencies = [
  "jsonschema>=4.0",
  "textual>=0.79",
  "rich>=13.8",
  "rapidfuzz>=3.9",
  "openpyxl>=3.1",
  "matplotlib>=3.5",
  "tqdm>=4.66",
]

[project.optional-dependencies]
dev = ["ruff", "pytest", "pytest-asyncio", "playwright"]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
  "slow: marks tests that exercise heavier model/training paths",
]
